{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 73,
  "lineage": "eacc302d-86a2-8c37-016b-d03f79ed56f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener/app/webserver-alb/c89326b2e0d02a02/f25ad615950f848c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/90e9dfc72e2d99fe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener/app/webserver-alb/c89326b2e0d02a02/f25ad615950f848c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:loadbalancer/app/webserver-alb/c89326b2e0d02a02",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.subnets",
            "module.sg_alb.aws_security_group.sg",
            "module.wordpress_alb.aws_lb.this",
            "module.wordpress_alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/90e9dfc72e2d99fe",
                        "weight": 50
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-b/97ffdd9982eb5e26",
                        "weight": 50
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener-rule/app/webserver-alb/c89326b2e0d02a02/f25ad615950f848c/2157dc65a92169c7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener-rule/app/webserver-alb/c89326b2e0d02a02/f25ad615950f848c/2157dc65a92169c7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener/app/webserver-alb/c89326b2e0d02a02/f25ad615950f848c",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_listener.alb_listener",
            "data.aws_subnet_ids.subnets",
            "module.sg_alb.aws_security_group.sg",
            "module.wordpress_alb.aws_lb.this",
            "module.wordpress_alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1a7f89451184c8b",
            "arn": "arn:aws:ec2:ap-south-1:532773623179:instance/i-064f9756c63251716",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064f9756c63251716",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08597e15195b2327d",
            "private_dns": "ip-172-31-10-203.ap-south-1.compute.internal",
            "private_ip": "172.31.10.203",
            "public_dns": "ec2-15-207-99-246.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.99.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0312fb8c40ae30498",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "webserver-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9be2a0d7",
            "tags": {
              "Name": "ec2-webserver"
            },
            "tags_all": {
              "Name": "ec2-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0152f65f1009dc7d4"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.subnets",
            "module.instance_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:532773623179:security-group/sg-0152f65f1009dc7d4",
            "description": "security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0152f65f1009dc7d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "532773623179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-8fc334e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:532773623179:security-group/sg-025bdbc131b96ccb2",
            "description": "security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025bdbc131b96ccb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_mysql_sg",
            "name_prefix": "",
            "owner_id": "532773623179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-8fc334e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:532773623179:security-group/sg-06667175e0c12db7f",
            "description": "security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06667175e0c12db7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "532773623179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-8fc334e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.wordpress_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:loadbalancer/app/webserver-alb/c89326b2e0d02a02",
            "arn_suffix": "app/webserver-alb/c89326b2e0d02a02",
            "dns_name": "webserver-alb-236210936.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:loadbalancer/app/webserver-alb/c89326b2e0d02a02",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-alb",
            "security_groups": [
              "sg-06667175e0c12db7f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-9be2a0d7"
              },
              {
                "subnet_id": "subnet-bf1c00d7"
              },
              {
                "subnet_id": "subnet-c579edbe"
              }
            ],
            "subnets": [
              "subnet-9be2a0d7",
              "subnet-bf1c00d7",
              "subnet-c579edbe"
            ],
            "tags": {
              "Name": "Wordpress Application Load Balancer"
            },
            "tags_all": {
              "Name": "Wordpress Application Load Balancer"
            },
            "vpc_id": "vpc-8fc334e4",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.sg",
            "data.aws_subnet_ids.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.wordpress_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/90e9dfc72e2d99fe",
            "arn_suffix": "targetgroup/wordpress-tg-a/90e9dfc72e2d99fe",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/90e9dfc72e2d99fe",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tg-a",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-8fc334e4"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-b/97ffdd9982eb5e26",
            "arn_suffix": "targetgroup/wordpress-tg-b/97ffdd9982eb5e26",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-b/97ffdd9982eb5e26",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tg-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-8fc334e4"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}